tests/f-stack/error/f-stack-error6.pkt
// DO NOT delete or add line in this file

// Establish a connection.
0   socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
+0  setsockopt(3, SOL_SOCKET, SO_REUSEADDR, [1], 4) = 0
+0 fcntl(3, F_SETFL, O_RDWR|O_NONBLOCK) = 0
+0  bind(3, ..., ...) = 0
+0  listen(3, 1) = 0

+0 < S 0:0(0) win 12336
+0 ~ +1  > S. 0:0(0) ack 1 <mss 1460>

+.1 < . 1:1(0) ack 1 win 25710 <TS val 100 ecr 0,eol,eol>

+0.2 accept(3, ..., ...) = 4 // f-stack return -1
